Fix nav header position issue when macOS scrollbars hidden

--- a/content/themes/dude/sass/layout/_site-header.scss
+++ b/content/themes/dude/sass/layout/_site-header.scss
@@ -31,16 +31,6 @@
   }
 }
 
-@media (min-width: 760px) {
-  .js-nav-active .site-header {
-    max-width: calc(#{$site-header-max-width} + 15px);
-
-    .nav-toggle.nav-toggle-desktop {
-      right: 15px;
-    }
-  }
-}
-
 .site-branding {
   position: relative;
   display: block;
